LP-293 Fix positioning of trigger caret on ios and ie11

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -128,9 +128,13 @@ $html-select_disabled-opacity: $field_select-disabled-opacity !default;
     &__trigger-caret {
         position: absolute;
         right: 0;
+        top: 50%;
+        transform: translateY(-50%);
     }
 
     &__trigger-caret-arrow {
+        display: block;
+
         @include pseudoicon(
             $type: 'arrow',
             $color: $html-select_caret-color,
